@@ -27,8 +27,8 @@
 
    <P>
 
-   <LI>Read-Write CVS repository available by anonymous CVS. Directions 
-   <A HREF="http://gcc.gnu.org/cvswrite.html"> here.
+   <LI>Read-Write CVS repository available by authorized CVS via SSH.
+       Directions <A HREF="http://gcc.gnu.org/cvswrite.html"> here.
    </A>
   </UL>
 </P>
